[gd_scene load_steps=3 format=3 uid="uid://05okwyww0a2f"]

[ext_resource type="Script" path="res://HUD/feature_selection.gd" id="1_842lp"]
[ext_resource type="Theme" uid="uid://bn1t2vsldn1b8" path="res://HUD/HUD_Theme.tres" id="1_bm7lx"]

[node name="FeatureSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_842lp")

[node name="Features" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FeatureListLabel" type="Label" parent="Features"]
layout_mode = 0
offset_left = 176.0
offset_top = 115.0
offset_right = 382.0
offset_bottom = 179.0
scale = Vector2(0.655102, 0.66494)
theme = ExtResource("1_bm7lx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Features :
"
horizontal_alignment = 1

[node name="FeatureListLabel2" type="Label" parent="Features"]
layout_mode = 0
offset_left = 158.0
offset_top = 390.0
offset_right = 431.0
offset_bottom = 454.0
scale = Vector2(0.655102, 0.66494)
theme = ExtResource("1_bm7lx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Initialization Range:"
horizontal_alignment = 1

[node name="FeatureList" type="ItemList" parent="Features"]
layout_mode = 0
offset_left = 167.0
offset_top = 159.0
offset_right = 323.0
offset_bottom = 372.0
item_count = 8
item_0/text = "1"
item_1/text = "x"
item_2/text = "y"
item_3/text = "x^2"
item_4/text = "y^2"
item_5/text = "sqrt(x^2 + y^2)"
item_6/text = "vertical_velocity"
item_7/text = ""

[node name="FeatureInitRange" type="LineEdit" parent="Features"]
layout_mode = 0
offset_left = 161.0
offset_top = 422.0
offset_right = 330.0
offset_bottom = 453.0
text = "1"
placeholder_text = "Range"

[node name="AddFeatureBtn" type="Button" parent="Features"]
layout_mode = 0
offset_left = 181.0
offset_top = 484.0
offset_right = 307.0
offset_bottom = 522.0
text = "Add"

[node name="SelectionResult" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1072.0
offset_right = 1112.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="WeightsListLabel" type="Label" parent="SelectionResult"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -366.0
offset_top = 117.0
offset_right = -118.0
offset_bottom = 181.0
grow_horizontal = 0
scale = Vector2(0.655102, 0.66494)
theme = ExtResource("1_bm7lx")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Chosen Features:"
horizontal_alignment = 1

[node name="WeightsList" type="ItemList" parent="SelectionResult"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -446.0
offset_top = 152.0
offset_right = -117.0
offset_bottom = 364.0
grow_horizontal = 0
item_count = 3
item_0/text = "1 | init range : -300 to 300"
item_1/text = "x | init range : -1 to 1"
item_2/text = "y | init range : -1 to 1"

[node name="DeleteFeatureBtn" type="Button" parent="SelectionResult"]
layout_mode = 0
offset_left = -316.0
offset_top = 393.0
offset_right = -185.0
offset_bottom = 426.0
text = "Delete"
